--- a/pom.xml
+++ b/pom.xml
@@ -145,6 +145,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
 					<addResources>true</addResources>
+					<executable>true</executable>
 				</configuration>
 				<executions>
 					<execution>
