--- a/pom.xml
+++ b/pom.xml
@@ -143,10 +143,9 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				<configuration>
-					<addResources>true</addResources>
+				<!--<configuration>
 					<executable>true</executable>
-				</configuration>
+				</configuration>-->
 				<executions>
 					<execution>
 						<goals>
