--- a/pom.xml
+++ b/pom.xml
@@ -76,22 +76,22 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-annotations</artifactId>
-			<!-- <version>2.9.5</version> -->
+			<version>2.9.5</version>
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-			<!-- <version>2.9.5</version> -->
+			<version>2.9.5</version>
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.datatype</groupId>
 			<artifactId>jackson-datatype-joda</artifactId>
-			<!-- <version>2.9.5</version> -->
+			<version>2.9.5</version>
 		</dependency>
 		<dependency>
 			<groupId>joda-time</groupId>
 			<artifactId>joda-time</artifactId>
-			<!-- <version>2.8.1</version> -->
+			<version>2.8.1</version>
 		</dependency>
         <dependency>
             <groupId>org.bouncycastle</groupId>
