--- a/src/main/resources/properties/env/rcqa/url.properties
+++ b/src/main/resources/properties/env/rcqa/url.properties
@@ -1,2 +1,3 @@
 profile.baseUrl=https://www-gbo-profile-rcqa.gbo.csdev.ehiaws-nonprod.com/
 profile.loginUrl=gbo-profile/api/v2/profiles/{brand}/{channel}/{loyalty}/login
+rental.baseUrl=https://www-gbo-rental-rcqa.gbo.csdev.ehiaws-nonprod.com/
