--- a/src/main/resources/properties/env/rcqa/url.properties
+++ b/src/main/resources/properties/env/rcqa/url.properties
@@ -1,3 +1,4 @@
 profile.baseUrl=https://www-gbo-profile-rcqa.gbo.csdev.ehiaws-nonprod.com/
 profile.loginUrl=gbo-profile/api/v2/profiles/{brand}/{channel}/{loyalty}/login
 rental.baseUrl=https://www-gbo-rental-rcqa.gbo.csdev.ehiaws-nonprod.com/
+rental.initiateUrl=gbo-rental/api/v2/reservations/{brand}/{channel}/initiate 
