--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,12 @@ spring:
 
 server:
    port: ${PORT:8080} 
-   
+   error:
+      include-stacktrace: always
+      whitelabel:
+         enabled: false
+         
+
 logging:
    level:
       org.springframework.web: INFO
