implemented select car class and commit reservation

--- a/src/main/resources/properties/env/rcqa/url.properties
+++ b/src/main/resources/properties/env/rcqa/url.properties
@@ -1,4 +1,6 @@
 profile.baseUrl=https://www-gbo-profile-rcqa.gbo.csdev.ehiaws-nonprod.com/
 profile.loginUrl=gbo-profile/api/v2/profiles/{brand}/{channel}/{loyalty}/login
 rental.baseUrl=https://www-gbo-rental-rcqa.gbo.csdev.ehiaws-nonprod.com/
-rental.initiateUrl=gbo-rental/api/v2/reservations/{brand}/{channel}/initiate 
+rental.initiateUrl=gbo-rental/api/v2/reservations/{brand}/{channel}/initiate
+rental.selectCarClassUrl=gbo-rental/api/v2/reservations/{brand}/{channel}/{resSessionId}/selectCarClass
+rental.commitUrl=gbo-rental/api/v2/reservations/{brand}/{channel}/{resSessionId}/commit
